# coyote

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: bitrate-tiers.md  protocol.md  yawp.md
python/yote/: __init__.py  __main__.py  cli.py  discord_bridge.py  yawp.py  yawp_weights.npz
research/: CONSTELLATION-RESULTS.md  DIFFERENTIAL-RESULTS.md  NOMENCLATURE.md  PILOT-RESULTS.md  RESULTS.md
skills/yote/: SKILL.md
skills/yote-data-over-audio/: SKILL.md
src/: compress.rs  config.rs  constellation.rs  cram.rs  differential.rs  framing.rs  io.rs  lib.rs  modulation.rs  opus.rs  pilot.rs  python.rs  quant.rs  stream.rs  tiers.rs  yawp.rs
