[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "yote"
version = "0.1.0"
description = "Data-over-audio codec. Smuggle data through Opus audio channels."
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
yote = "yote.cli:main"

[tool.maturin]
features = ["python"]
bindings = "pyo3"
python-source = "python"
module-name = "yote._yote"
